hphp/hack/test/typecheck/ignore_readonly_bad.php
<?hh

type TF = (readonly function(int):string);

function foo(<<__IgnoreReadonlyError>> TF $f):void { }
